# anomaly-detection-using-sound

./: .gitmodules  CMakeLists.txt  DockerFIle  Dockerfile  README.md  main.py  note.md  pyproject.toml  ref_code.py  requirements.txt  run_container.sh
.devcontainer/: Dockerfile  devcontainer.json
EDA/: 1_basic_info.py  2_ml.py  3_umap.py  EDA.ipynb  data_merge.py  data_spliter.py  lab_data_analysus.py
EDA/.devcontainer/: devcontainer.json
demo/: data_loader.py  pyqt.py
pycode/: data_augmentation.py  data_preprocessing.py  dataset.py  main.py  model.py  onnx_convert.py
pyserial/: data_packet.py  main.py  pyqtgraph_spectrogram_example.py  realtime_fft_widget.py  seial_test.py  test_1_data_monitor.py  test_2_data_writer.py  test_3_data_converter.py  test_4_data_plotter.py  vacgrip.py  vacgrip_threaded.py  visualize_csv_spectrogram.py
src/: main.cpp  main.py  main_libtorch.cpp  model.py
src/EDA/: main.py
src/demo/: cuda.py  matplotlib_backend_test.py
